style.css
* {
    margin: 0;
    padding: 0;
}

html, body {
    width: 100%;
    height: 100%;
    overflow: hidden;
    cursor: none;
}

.relative {
    position: relative;
    width: 100%;
    height: 100%;
}

.relative > * {
    position: absolute;
}

.game-world, .input-overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: 0;
    padding: 0;
}

.player {
    z-index: 1;
}

.player .body {
    left: -10px;
    top: -10px;
    width: 20px;
    height: 20px;
    background-color: #AAA;
    border-radius: 10px;
}

.player .gun {
    top: -2px;
    left: -2px;
    width: 16px;
    height: 4px;
    background-color: #666;
}

.dead.enemy {
    z-index: -1;
}

.enemy .body {
    left: -10px;
    top: -10px;
    width: 20px;
    height: 20px;
    background-color: #A44;
    border-radius: 10px;
}

.bullet .body {
    left: -2px;
    top: -1px;
    width: 4px;
    height: 2px;
    background-color: black;
}

.crosshair {
    width: 1px;
    height: 1px;
    background-color: black;
}

.crosshair .body {
    top: -5px;
    left: -5px;
    width: 9px;
    height: 9px;
    border: 1px solid black;
    border-radius: 5px;
}

